# python-devcontainer

./: README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
