[tool.poetry]
name = "python-devcontainer"
version = "0.1.0"
description = "Python project using poetry as pip package manager and project builder"
authors = ["alex00pep <alexmtnezf@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
